# cmft

./: .gitignore  CMakeLists.txt  meson.build
include/cmft/: allocation.hpp  array.hpp  core.hpp  cpp_utils.hpp  error.hpp  heap_array.hpp  platform.hpp  slice.hpp
include/cmft/io/: file_reader.hpp
include/cmft/misc/: disable_fast_math.hpp  enable_fast_math.hpp  hints.hpp  llvm-mca.hpp
src/: allocation.cpp  error.cpp  file_reader.cpp  test.cpp
